# python-memory

./: .gitignore  LICENSE  MANIFEST.in  README.md  concentration.py  game.py  memory.py  setup.cfg
pythonmemory/memory/: guess_card.py  intro.py  pause.py  print_cards.py
