[metadata]
name = python-memory
version = 1.0.0
url = https://github.com/marco-colonna/python-memory
project_urls =
    Source = https://github.com/marco-colonna/python-memory
    Issues = https://github.com/marco-colonna/python-memory/issues
author = Marco Colonna
author_email = mcolonna107@gmail.com
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Topic :: Games/Entertainment
license = MIT
license_files = LICENSE
description = Memory game in Python
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python, concentration, game

[options]
python_requires = >=3.9
include_package_data = True
package_dir =
    = src
packages = find:

[options.packages.find]
where = src
